--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "dev": "nodemon ./src/server.js",
         "deven": "concurrently \"nodemon ./src/server.js\" \"cd../frontend &&npm run serve\""
     },
@@ -13,7 +13,8 @@
     "dependencies": {
         "concurrently": "^6.0.2",
         "cors": "^2.8.5",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "jest": "^26.6.3"
     },
     "devDependencies": {
         "nodemon": "^2.0.7"
