--- a/backend/package.json
+++ b/backend/package.json
@@ -4,19 +4,22 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "jest",
-        "dev": "nodemon ./src/server.js",
-        "deven": "concurrently \"nodemon ./src/server.js\" \"cd../frontend &&npm run serve\""
+        "test": "jest && mocha",
+        "dev": "nodemon ./src/start.js",
+        "devenv": "concurrently \"nodemon ./start.js\" \"cd../frontend &&npm run serve\""
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.19.0",
         "concurrently": "^6.0.2",
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "jest": "^26.6.3"
     },
     "devDependencies": {
-        "nodemon": "^2.0.7"
+        "mocha": "^8.3.2",
+        "nodemon": "^2.0.7",
+        "supertest": "^6.1.3"
     }
 }
